--- a/index.html
+++ b/index.html
@@ -1,25 +1,95 @@
 <html>
-   <head>
-      <title>DMCA | Play letiltás</title>
-   </head>
-   <body>
-      <h1>A Filc Napló és az Arisztokréta közös tájékoztató oldala az alkalmazások letiltásával kapcsolatban</h1>
-      <h2>Mi történt?</h2>
-      <p>A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló, és a K-Napló).
-         <br>A KRÉTA DMCA kérelmének személytelenített verzióját <i>itt</i> tudjátok megtekinteni.
-      </p>
-      <h2>Mit fogtok tenni?</h2>
-      <h3>1. Email a KRÉTÁnak</h3>
-      <p>
-         A KRÉTÁnak küldött levelünket <i>itt</i> tudjátok megtekinteni. <!--Lenyílós cucc vagy ablak (mobilon fullscreen)--><br>Amíg nem kapunk valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 17, csütörtök), további lépéseket nem teszünk. <br><br><i>A további lépések az esetleges válaszlevéltől függően valósulnak meg. A következőkben leírtak arra az esetre vonatkoznak, ha a KRÉTÁtól nem kapunk hivatalos választ.</i>
-      </p>
-      <h3>2. Appok ismételt közzététele</h3>
-      <p>Ha válaszolnak, a válaszuk szellemében járunk el.
-         <br> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után megpróbáljuk az appokat újra közzétenni a Play áruházban.<br>Ha innen az appokat újra eltávolíttatják, akkor akár feltölthetjük őket márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is elérhetők maradnak GitHubon keresztük.<br>Az appokba automatikus frissítési figyelmeztetést építünk.
-      </p>
-      <h3>3. Zajcsapás</h3>
-      <p>Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne, talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.</p>
-      <h3>Utolsóadik: Beletörődés</h3>
-      <p>Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak maradnak elérhetők, azokat saját felelősségre lehet majd csak használni.<br><br>Természetesen mindent megteszünk, hogy ne így kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.</p>
-   </body>
+  <head>
+    <title>DMCA | Play letiltás</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css">
+
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src=""
+            alt=""
+            class="d-inline-block align-top navbar-img"
+          />
+
+          <img class="navbar-img" src="img/icon-1x.png" srcset="
+          assets/icon-1x.png 1x,
+          assets/icon-2x.png 2x,
+          assets/icon-3x.png 3x">
+        </a>
+      </div>
+    </nav>
+
+    <div class="container" id="content">
+
+    <h2 class="pb-3 pt-5">
+      A Filc Napló és az Arisztokréta közös tájékoztató oldala az alkalmazások
+      letiltásával kapcsolatban
+    </h2>
+
+    <h3>Mi történt?</h3>
+    <p>
+      A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
+      KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
+      klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló, és
+      a K-Napló). <br />A KRÉTA DMCA kérelmének személytelenített verzióját
+      <i>itt</i> tudjátok megtekinteni.
+    </p>
+    <h3>Mit fogtok tenni?</h3>
+    <h4>1. Email a KRÉTÁnak</h3>
+    <p>
+      A KRÉTÁnak küldött levelünket <i>itt</i> tudjátok megtekinteni.
+      <!--Lenyílós cucc vagy ablak (mobilon fullscreen)--><br />Amíg nem kapunk
+      valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 17,
+      csütörtök), további lépéseket nem teszünk. <br /><br /><i
+        >A további lépések az esetleges válaszlevéltől függően valósulnak meg. A
+        következőkben leírtak arra az esetre vonatkoznak, ha a KRÉTÁtól nem
+        kapunk hivatalos választ.</i
+      >
+    </p>
+    <h4>2. Appok ismételt közzététele</h3>
+    <p>
+      Ha válaszolnak, a válaszuk szellemében járunk el. <br />
+      Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
+      megpróbáljuk az appokat újra közzétenni a Play áruházban.<br />Ha innen az
+      appokat újra eltávolíttatják, akkor akár feltölthetjük őket
+      márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
+      elérhetők maradnak GitHubon keresztük.<br />Az appokba automatikus
+      frissítési figyelmeztetést építünk.
+    </p>
+    <h4>3. Zajcsapás</h3>
+    <p>
+      Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
+      összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne,
+      talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
+    </p>
+    <h4>Utolsóadik: Beletörődés</h3>
+    <p>
+      Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
+      működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
+      próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
+      maradnak elérhetők, azokat saját felelősségre lehet majd csak
+      használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
+      kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
+    </p>
+
+   </div>
+
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
