további szépítgetések, navbar

--- a/index.html
+++ b/index.html
@@ -13,31 +13,36 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="navbar-nav ps-3">
+          <a class="nav-item nav-link active" href="https://arisztokreta.hu">
+            <img class="navbar-img" src="img/icon-1x.png" srcset="
+            assets/icon-1x.png 1x,
+            assets/icon-2x.png 2x,
+            assets/icon-3x.png 3x">
+            Arisztokréta
+         </a>
+          <a class="nav-item nav-link active" href="https://filcnaplo.hu/">
+            <img
             src=""
             alt=""
             class="d-inline-block align-top navbar-img"
           />
-
-          <img class="navbar-img" src="img/icon-1x.png" srcset="
-          assets/icon-1x.png 1x,
-          assets/icon-2x.png 2x,
-          assets/icon-3x.png 3x">
-        </a>
-      </div>
+            Filc Napló
+         </a>
+        </div>
     </nav>
 
     <div class="container" id="content">
 
-    <h2 class="pb-3 pt-5">
+    <h2>
       A Filc Napló és az Arisztokréta közös tájékoztató oldala az alkalmazások
       letiltásával kapcsolatban
     </h2>
 
     <h3>Mi történt?</h3>
+      
     <p>
       A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
@@ -46,7 +51,7 @@
       <i>itt</i> tudjátok megtekinteni.
     </p>
     <h3>Mit fogtok tenni?</h3>
-    <h4>1. Email a KRÉTÁnak</h3>
+    <h5>1. Email a KRÉTÁnak</h3>
     <p>
       A KRÉTÁnak küldött levelünket <i>itt</i> tudjátok megtekinteni.
       <!--Lenyílós cucc vagy ablak (mobilon fullscreen)--><br />Amíg nem kapunk
@@ -57,23 +62,25 @@
         kapunk hivatalos választ.</i
       >
     </p>
-    <h4>2. Appok ismételt közzététele</h3>
-    <p>
-      Ha válaszolnak, a válaszuk szellemében járunk el. <br />
-      Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
-      megpróbáljuk az appokat újra közzétenni a Play áruházban.<br />Ha innen az
-      appokat újra eltávolíttatják, akkor akár feltölthetjük őket
-      márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
-      elérhetők maradnak GitHubon keresztük.<br />Az appokba automatikus
-      frissítési figyelmeztetést építünk.
-    </p>
-    <h4>3. Zajcsapás</h3>
+    <h5>2. Appok ismételt közzététele</h3>
+    <ul>
+      <li>Ha válaszolnak, a válaszuk szellemében járunk el.</li>
+      <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
+         megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
+      <li>Ha innen az
+         appokat újra eltávolíttatják, akkor akár feltölthetjük őket
+         márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
+         elérhetők maradnak GitHubon keresztül.</li>
+      <li>Az appokba automatikus
+         frissítési figyelmeztetést építünk.</li>
+    </ul>
+    <h5>3. Zajcsapás</h3>
     <p>
       Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
       összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne,
       talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
     </p>
-    <h4>Utolsóadik: Beletörődés</h3>
+    <h5>Utolsóadik: Beletörődés</h3>
     <p>
       Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
       működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
