--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
         <div class="navbar-nav ps-3">
           <a class="nav-item nav-link active" href="https://arisztokreta.hu">
             <img class="navbar-img" src="img/icon-1x.png" srcset="
-            assets/icon-1x.png 1x,
-            assets/icon-2x.png 2x,
-            assets/icon-3x.png 3x">
+            assets/arisztokreta1x.png 1x,
+            assets/arisztokreta2x.png 2x,
+            assets/arisztokreta3x.png 3x">
             Arisztokréta
          </a>
           <a class="nav-item nav-link active" href="https://filcnaplo.hu/">
-            <img
-            src=""
-            alt=""
-            class="d-inline-block align-top navbar-img"
-          />
+            <img class="navbar-img" src="img/icon-1x.png" srcset="
+            assets/filc1x.png 1x,
+            assets/filc2x.png 2x,
+            assets/filc3x.png 3x">
             Filc Napló
          </a>
         </div>
