Dropdown and DMCA text

--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <html>
-  <head>
-    <title>DMCA | Play letiltás</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <title>DMCA | Play letiltás</title>
 
-  </head>
-  <body>
-    <!-- NAVBAR -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="navbar-nav ps-3">
-          <a class="nav-item nav-link active" href="https://arisztokreta.hu">
-            <img class="navbar-img" src="img/icon-1x.png" srcset="
+</head>
+
+<body>
+  <!-- NAVBAR -->
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="navbar-nav ps-3">
+      <a class="nav-item nav-link active" href="https://arisztokreta.hu">
+        <img class="navbar-img" src="img/icon-1x.png" srcset="
             assets/arisztokreta1x.png 1x,
             assets/arisztokreta2x.png 2x,
             assets/arisztokreta3x.png 3x">
-            Arisztokréta
-         </a>
-          <a class="nav-item nav-link active" href="https://filcnaplo.hu/">
-            <img class="navbar-img" src="img/icon-1x.png" srcset="
+        Arisztokréta
+      </a>
+      <a class="nav-item nav-link active" href="https://filcnaplo.hu/">
+        <img class="navbar-img" src="img/icon-1x.png" srcset="
             assets/filc1x.png 1x,
             assets/filc2x.png 2x,
             assets/filc3x.png 3x">
-            Filc Napló
-         </a>
-        </div>
-    </nav>
+        Filc Napló
+      </a>
+    </div>
+  </nav>
 
-    <div class="container" id="content">
+  <div class="container" id="content">
 
     <h2>
       A Filc Napló és az Arisztokréta közös tájékoztató oldala az alkalmazások
@@ -41,61 +39,101 @@
     </h2>
 
     <h3>Mi történt?</h3>
-      
+
     <p>
       A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
       klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló, és
-      a K-Napló). <br />A KRÉTA DMCA kérelmének személytelenített verzióját
-      <i>itt</i> tudjátok megtekinteni.
+      a K-Napló).
+      <details>
+        <summary>A KRÉTA DMCA kérelmének személytelenített verziója</summary>
+        <hr>
+        Text copy of DMCA complaint: <br>
+country_residence: HU<br>
+full_name: [privát]<br>
+companyname: eKRÉTA Informatikai Zrt.<br>
+represented_copyright_holder: dr. Balázs Szabó<br>
+contact_email_noprefill: [privát]<br>
+login_email: [privát]<br>
+description_of_copyrighted_work: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA<br>
+Ellenőrző, KRÉTA Tanári Napló official eKRÉTA Applications use API keys and<br>
+UserAgent to indentify themselves for the servers as the official eKRÉTA<br>
+application. Alternative apps use the same API keys and UserAgent as the<br>
+official apps.<br>
+location_of_copyrighted_work: Google Play Store:<br>
+https://play.google.com/store/apps/details?id=hu.ekreta.student<br>
+https://play.google.com/store/apps/details?id=hu.ekreta.guardian<br>
+https://play.google.com/store/apps/details?id=hu.eKreta.KretaAndroid<br>
+https://play.google.com/store/apps/details?id=hu.ekreta.naplo<br>
+<br>
+url_box:<br>
+https://play.google.com/store/apps/details?id=hu.filcnaplo.ellenorzo<br>
+url_box: https://play.google.com/store/apps/details?id=hu.coware.ellenorzo<br>
+url_box: https://play.google.com/store/apps/details?id=hu.coware.naplo<br>
+url_box: https://play.google.com/store/apps/details?id=knaplo.gbr22<br>
+hidden_uraw:<br>
+dmca_affirmations_authorized: agree<br>
+dmca_affirmations_penalty: agree1<br>
+NoticeToDeveloper: agree1<br>
+signature: [privát]<br>
+signature_date: Tue, 01 Dec 2020<br>
+subject_lr_dmca: Your Request to Google<br>
+hidden_product: googleplay<br>
+hidden_ctx:<br>
+geolocation: HU
+        <hr>
+      </details>
     </p>
     <h3>Mit fogtok tenni?</h3>
     <h5>1. Email a KRÉTÁnak</h3>
-    <p>
-      A KRÉTÁnak küldött levelünket <i>itt</i> tudjátok megtekinteni.
-      <!--Lenyílós cucc vagy ablak (mobilon fullscreen)--><br />Amíg nem kapunk
-      valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 17,
-      csütörtök), további lépéseket nem teszünk. <br /><br /><i
-        >A további lépések az esetleges válaszlevéltől függően valósulnak meg. A
+      <p>
+      <details>
+        <summary> A KRÉTÁnak küldött levelünk</summary>
+        <hr>
+        To Be Finalized
+        <hr>
+      </details>
+      <br>
+      Amíg nem kapunk valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 17,
+      csütörtök), további lépéseket nem teszünk. <br /><br /><i>A további lépések az esetleges válaszlevéltől függően
+        valósulnak meg. A
         következőkben leírtak arra az esetre vonatkoznak, ha a KRÉTÁtól nem
-        kapunk hivatalos választ.</i
-      >
-    </p>
-    <h5>2. Appok ismételt közzététele</h3>
-    <ul>
-      <li>Ha válaszolnak, a válaszuk szellemében járunk el.</li>
-      <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
-         megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
-      <li>Ha innen az
-         appokat újra eltávolíttatják, akkor akár feltölthetjük őket
-         márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
-         elérhetők maradnak GitHubon keresztül.</li>
-      <li>Az appokba automatikus
-         frissítési figyelmeztetést építünk.</li>
-    </ul>
-    <h5>3. Zajcsapás</h3>
-    <p>
-      Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
-      összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne,
-      talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
-    </p>
-    <h5>Utolsóadik: Beletörődés</h3>
-    <p>
-      Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
-      működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
-      próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
-      maradnak elérhetők, azokat saját felelősségre lehet majd csak
-      használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
-      kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
-    </p>
+        kapunk hivatalos választ.</i>
+      </p>
+      <h5>2. Appok ismételt közzététele</h3>
+        <ul>
+          <li>Ha válaszolnak, a válaszuk szellemében járunk el.</li>
+          <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
+            megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
+          <li>Ha innen az
+            appokat újra eltávolíttatják, akkor akár feltölthetjük őket
+            márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
+            elérhetők maradnak GitHubon keresztül.</li>
+          <li>Az appokba automatikus
+            frissítési figyelmeztetést építünk.</li>
+        </ul>
+        <h5>3. Zajcsapás</h3>
+          <p>
+            Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
+            összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne,
+            talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
+          </p>
+          <h5>Utolsóadik: Beletörődés</h3>
+            <p>
+              Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
+              működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
+              próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
+              maradnak elérhetők, azokat saját felelősségre lehet majd csak
+              használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
+              kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
+            </p>
 
-   </div>
+  </div>
 
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
