--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
       klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló, és
       a K-Napló).
-      <details>
-        <summary>A KRÉTA DMCA kérelmének személytelenített verziója</summary>
-        <hr>
-        Text copy of DMCA complaint: <br>
-country_residence: HU<br>
-full_name: [privát]<br>
-companyname: eKRÉTA Informatikai Zrt.<br>
-represented_copyright_holder: dr. Balázs Szabó<br>
-contact_email_noprefill: [privát]<br>
-login_email: [privát]<br>
-description_of_copyrighted_work: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA<br>
-Ellenőrző, KRÉTA Tanári Napló official eKRÉTA Applications use API keys and<br>
-UserAgent to indentify themselves for the servers as the official eKRÉTA<br>
-application. Alternative apps use the same API keys and UserAgent as the<br>
-official apps.<br>
-location_of_copyrighted_work: Google Play Store:<br>
-https://play.google.com/store/apps/details?id=hu.ekreta.student<br>
-https://play.google.com/store/apps/details?id=hu.ekreta.guardian<br>
-https://play.google.com/store/apps/details?id=hu.eKreta.KretaAndroid<br>
-https://play.google.com/store/apps/details?id=hu.ekreta.naplo<br>
-<br>
-url_box:<br>
-https://play.google.com/store/apps/details?id=hu.filcnaplo.ellenorzo<br>
-url_box: https://play.google.com/store/apps/details?id=hu.coware.ellenorzo<br>
-url_box: https://play.google.com/store/apps/details?id=hu.coware.naplo<br>
-url_box: https://play.google.com/store/apps/details?id=knaplo.gbr22<br>
-hidden_uraw:<br>
-dmca_affirmations_authorized: agree<br>
-dmca_affirmations_penalty: agree1<br>
-NoticeToDeveloper: agree1<br>
-signature: [privát]<br>
-signature_date: Tue, 01 Dec 2020<br>
-subject_lr_dmca: Your Request to Google<br>
-hidden_product: googleplay<br>
-hidden_ctx:<br>
-geolocation: HU
-        <hr>
-      </details>
+    <details>
+      <summary>A KRÉTA DMCA kérelmének személytelenített verziója</summary>
+      <hr>
+      Text copy of DMCA complaint: <br>
+      country_residence: HU<br>
+      full_name: [privát]<br>
+      companyname: eKRÉTA Informatikai Zrt.<br>
+      represented_copyright_holder: dr. Balázs Szabó<br>
+      contact_email_noprefill: [privát]<br>
+      login_email: [privát]<br>
+      <b>description_of_copyrighted_work: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA<br>
+      Ellenőrző, KRÉTA Tanári Napló official eKRÉTA Applications use API keys and<br>
+      UserAgent to indentify themselves for the servers as the official eKRÉTA<br>
+      application. Alternative apps use the same API keys and UserAgent as the<br>
+      official apps.</b><br>
+      location_of_copyrighted_work: Google Play Store:<br>
+      https://play.google.com/store/apps/details?id=hu.ekreta.student<br>
+      https://play.google.com/store/apps/details?id=hu.ekreta.guardian<br>
+      https://play.google.com/store/apps/details?id=hu.eKreta.KretaAndroid<br>
+      https://play.google.com/store/apps/details?id=hu.ekreta.naplo<br>
+      <br>
+      url_box:<br>
+      https://play.google.com/store/apps/details?id=hu.filcnaplo.ellenorzo<br>
+      url_box: https://play.google.com/store/apps/details?id=hu.coware.ellenorzo<br>
+      url_box: https://play.google.com/store/apps/details?id=hu.coware.naplo<br>
+      url_box: https://play.google.com/store/apps/details?id=knaplo.gbr22<br>
+      hidden_uraw:<br>
+      dmca_affirmations_authorized: agree<br>
+      dmca_affirmations_penalty: agree1<br>
+      NoticeToDeveloper: agree1<br>
+      signature: [privát]<br>
+      signature_date: Tue, 01 Dec 2020<br>
+      subject_lr_dmca: Your Request to Google<br>
+      hidden_product: googleplay<br>
+      hidden_ctx:<br>
+      geolocation: HU
+      <hr>
+    </details>
     </p>
     <h3>Mit fogtok tenni?</h3>
     <h5>1. Email a KRÉTÁnak</h3>
