--- a/index.html
+++ b/index.html
@@ -39,16 +39,14 @@
     </h2>
 
     <h3>Mi történt?</h3>
-
     <p>
       A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
-      klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló, és
+      klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló+, és
       a K-Napló).
     <details>
-      <summary>A KRÉTA DMCA kérelmének személytelenített verziója</summary>
+      <summary><b>A KRÉTA DMCA kérelmének személytelenített verziója</b></summary>
       <hr>
-      Text copy of DMCA complaint: <br>
       country_residence: HU<br>
       full_name: [privát]<br>
       companyname: eKRÉTA Informatikai Zrt.<br>
@@ -56,10 +54,10 @@
       contact_email_noprefill: [privát]<br>
       login_email: [privát]<br>
       <b>description_of_copyrighted_work: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA<br>
-      Ellenőrző, KRÉTA Tanári Napló official eKRÉTA Applications use API keys and<br>
-      UserAgent to indentify themselves for the servers as the official eKRÉTA<br>
-      application. Alternative apps use the same API keys and UserAgent as the<br>
-      official apps.</b><br>
+        Ellenőrző, KRÉTA Tanári Napló official eKRÉTA Applications use API keys and<br>
+        UserAgent to indentify themselves for the servers as the official eKRÉTA<br>
+        application. Alternative apps use the same API keys and UserAgent as the<br>
+        official apps.</b><br>
       location_of_copyrighted_work: Google Play Store:<br>
       https://play.google.com/store/apps/details?id=hu.ekreta.student<br>
       https://play.google.com/store/apps/details?id=hu.ekreta.guardian<br>
@@ -84,23 +82,75 @@
       <hr>
     </details>
     </p>
+    <h3>Miért fontos ez?</h3>
+    <p></p>
     <h3>Mit fogtok tenni?</h3>
     <h5>1. Email a KRÉTÁnak</h3>
       <p>
       <details>
-        <summary> A KRÉTÁnak küldött levelünk</summary>
+        <summary><b>A KRÉTÁnak küldött levelünk</b></summary>
         <hr>
         To Be Finalized
         <hr>
       </details>
+      <!--<details>
+        <summary> A KRÉTÁ válasza</summary>
+        <hr>
+        Reméljük, hamarosan.
+        <hr>
+      </details>-->
       <br>
-      Amíg nem kapunk valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 17,
-      csütörtök), további lépéseket nem teszünk. <br /><br /><i>A további lépések az esetleges válaszlevéltől függően
-        valósulnak meg. A
+      Amíg nem kapunk valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 19,
+      szombat), további lépéseket nem teszünk.<br>
+      Tudjuk, hogy ha valóban érdemi választ szeretnének adni, akkor ahhoz egy
+      KRÉTA szintű, hatalmas cégnél sok idő kell, ezért ha több idő után válaszolnak, azt is ugyanúgy figyelembe
+      vesszük, most viszont a válaszlevelükig vagy 5 napig a várakozáson kívül mást nem fogunk csinálni.<br>
+      Ha válaszolnak a levelünkre, és abban nem kérnek arra, hogy ne tegyük azt közzé, akkor itt fogjuk közzétenni.<br>
+      Ha arra kérnek, hogy ne tegyük közzé, akkor is jelezni fogjuk, hogy mikor válaszoltak, és leírjuk a levelük
+      tartalmának lényegét.<br><br>
+      <i>A további lépések az esetleges válaszlevéltől függően valósulnak meg. A
         következőkben leírtak arra az esetre vonatkoznak, ha a KRÉTÁtól nem
         kapunk hivatalos választ.</i>
       </p>
-      <h5>2. Appok ismételt közzététele</h3>
+      <h5>2. A Google döntésének vitatása</h5>
+      <p>Bár a DMCA követelést a KRÉTA küldte, azt a Google dolgozta fel, és mivel jogosnak tartotta, teljesítette.<br>
+        Mi természetesen nem tartjuk jogosnak:<br>
+      <ul>
+        <li><b>A KRÉTA által kifogásolt dolgok nem szükségesek az appokhoz</b><br>
+          A DMCA kérelemben az API Key és a User Agent használatát kifogásolta a KRÉTA.<br>
+          Az API Key csak az iskolák listájának lekéréséhez szükséges, a Filc Napló esetében ezt saját szerverről
+          szolgátuk ki mindig is, ezt a változtatást az Arisztokréta esetében is könnyen be lehetne vezetni.<br>
+          Valóban mindkét app a KRÉTA app által is használt User Agenttel azonosította magát a KRÉTA szerverek előtt,
+          erre azonban rá voltunk kényszerítve, mert minden más User Agentet blokkolnak a KRÉTA szerverei. Ha ez
+          változik, mi is változtatunk.</li>
+        <li><b>Nem biztos, hogy vonatkozik erre a DMCA.</b><br>
+          Nem vagyunk jogászok, és nincs hozzáférésünk jogi tanácsadáshoz, de vitatható, hogy a DMCA, egy szerzői jogi
+          törvény vonatkozik-e egy random generált karaktersorra (API Key) és egy alkalmazáscsomag-azonosítóra
+          (UserAgent), azaz gyakorlatilag a KRÉTA app nevére.<br>
+          A jogosulatlan API használat felmerülhet (ezzel a fentebb részletezett okokból nem értünk egyet, de jogilag
+          sajnos helytáll), és a KRÉTA app Trademarkjának megsértése is (bár ez sem egészen így működik), de a DMCA
+          tudtunkkal ezekre a dolgokra nem vonatkozik.</li>
+        <li><b>Fair Use?</b><br>
+          Az amerikai szerzői jogi törvénnyel kapcsolatban sokszor van szó Fair Useról, azaz egy jogvédett alkotás olyan
+          módon való felhasználásáról, ami nem tiltott.<br>
+          Ebben sem vagyunk szakértők, de ennek elvei alapján igaz, hogy:<br>
+          Az alkalmazásaink nem akadályozzák az eredetit a piacának elérésében (az nem piacon dolgozik);<br>
+          Nem akadályozzák bevételszerzésben (az nem szerez közvetlenül bevételt a működésével);<br>
+          Nem nyújtanak jogosulatlanul nagyobb hozzáférést a rendszerhez, mint a hivatalos appok.</li>
+        <li><b>Döntés enyhítése?</b><br>
+          A Google Playen egy, a Google elveit sértő appot kétféleképpen büntethetnek:<br>
+          Eltávolíthatják, ami azt jelenti, hogy az appot nem lehet megtalálni a keresőben, de ha a fejlesztő javítja a
+          kifogásolt elemet (ahogy azt mi is meg tudnánk tenni), az app különösebb probléma nélkül visszakerülhet az
+          áruházba, még akkor is ha eredetileg tényleg fennállt a probléma.<br>
+          A súlyosabb döntés, amitben mi is részesültünk, a felfüggesztés. Talán kevésbé hangzik durvának, de ez az a
+          boltból való eltávolításon túl azzal is jár, hogy a régi appot már soha többé nem lehet frissíteni, az
+          értékelések és a felhasználók elvesznek, hacsak be nem sikerül bizonyítani hogy eredetileg sem állt fenn a
+          probléma.<br>
+          Sajnos mi ezt aligha tudjuk bebizonyítani, de talán kereshetünk utat a döntés enyhítésére, hogy az csak
+          eltávolítás legyen, ne felfüggesztés.</li>
+      </ul>
+      </p>
+      <h5>3. Appok ismételt közzététele</h3>
         <ul>
           <li>Ha válaszolnak, a válaszuk szellemében járunk el.</li>
           <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
@@ -112,10 +162,10 @@
           <li>Az appokba automatikus
             frissítési figyelmeztetést építünk.</li>
         </ul>
-        <h5>3. Zajcsapás</h3>
+        <h5>4. Közösség bevonása</h3>
           <p>
             Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
-            összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó öltlet lenne,
+            összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó ötlet lenne,
             talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
           </p>
           <h5>Utolsóadik: Beletörődés</h3>
