--- a/index.html
+++ b/index.html
@@ -33,12 +33,28 @@
 
   <div class="container" id="content">
 
+    <a name=top></a>
     <h2>
       A Filc Napló és az Arisztokréta közös tájékoztató oldala az alkalmazások
       letiltásával kapcsolatban
     </h2>
-
-    <h3>Mi történt?</h3>
+    <p>SEGÍTSÉG, mennyi szöveg!<br>
+      Ne aggódj, nem kell mindet elolvasnod, navigálhasz az alábbi tartalomjegyzékkel. Ha már mindennel tisztában vagy,
+      olvasd el, hogyan segíthetsz nekünk.</p>
+    <h4>Tartalom</h4>
+    <p>
+    <ul>
+      <li><a href="#mitortent">Mi történt?</a></li>
+      <li><a href="#miertfontos">Miért fontos ez?</a></li>
+      <li><a href="#mitfogtoktenni">Mit fogtok tenni?</li></a>
+      <li><a href="#mibensegithetek"><b>Miben segíthetek?</b></a></li>
+      <li><a href="#kapcsolat">Kapcsolat</a></li>
+    </ul>
+    </p>
+<hr>
+    <a name="mitortent">
+      <h3>Mi történt?</h3>
+    </a>
     <p>
       A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
@@ -82,10 +98,75 @@
       <hr>
     </details>
     </p>
+    <a name="miertfontos"></a>
     <h3>Miért fontos ez?</h3>
-    <p></p>
+    <p>
+    <ul>
+      <li><b>
+          <p>Úgy gondoljuk, szükség van az alternatív kliensekre.</p>
+        </b>
+
+        <p>Egy ilyen, egész országot lefedő, napi felhasználók széles rétegeit kiszolgáló rendszernél szükséges a
+          rendszer
+          nyitottsága, nyilvános ellenőrizhetősége.</p>
+
+        <p>Az összes különböző - akár helyi - igényt egy egységes rendszer aligha tudja mindenki megelégedésére
+          kiszolgálni;
+          az alternatív alkalmazások tartalmaznak a hivatalostól eltérő, bővebb funkciókat. Itt említenénk meg a Filc
+          Napló
+          és az Arisztokréta statisztikai funkcióit, vagy az adott iskolák számára készült, egyedibb megoldásokat.</p>
+
+        <p>Egy nyílt forráskódú alkalmazás esetén bárki, aki egy kicsit ért a programozáshoz, megvalósíthat olyan
+          funkciókat, amelyekre szüksége van a hatékony tanuláshoz, ellenőrzés és javítások után ezek a funkciók az
+          összes
+          felhasználó javára váltak, ez nem egyszer előfordult.</p>
+      </li>
+
+      <li>
+        <p><b>Az alternatív kliensek nem veszélyesek, és nem okoznak a KRÉTA számára problémát.</p></b>
+
+        <p>Egy zárt forráskódú alternatív alkalmazás szerintünk sem lenne rendben.</p>
+
+        <p>Tisztában vagyunk az általunk fejlesztett alkalmazásokon - passzív módon - átfolyó adatok érzékenységével: A
+          Filc Napló adatkezelési tájékozatóját <a href="https://filcnaplo.hu/privacy">itt</a>, az
+          Arisztokrétáét <a href="https://arisztokreta.hu/privacy">itt</a> találjátok.</p>
+
+        <p>Az appjaink nyílt forráskódúak, a kódbázis karbantartott és érthetően felépített, magagatoknak is
+          ellenőrizhetitek, hogy nem sodorják veszélybe a felhasználók adatait.</p>
+
+        <p>A Filc Napló esetében az app forráskódjához több személynek van írásos hozzáférése, ők ezt alapos ellenőrzés
+          után, aktivitás alapján kapják meg. Minden döntés közmegegyezéssel születik, minden frissítést többen
+          átnéznek,
+          mielőtt azok publikálásra kerülnének. Így egy esetleges belső rosszakaró sem tud veszélyes kódot eljuttatni a
+          nektek.</p>
+      </li>
+
+      <li>
+        <p><b>A helyzet rosszabb, ha az alternatív kliensek le vannak tiltva. </p></b>
+
+        <p>A Play áruházban a kedden érvényre jutott KRÉTA-kérelemnek megfelelően már csak az általuk kiadott
+          alkalmazások
+          elérhetők. Ez a szempontotokból kevésbé biztonságos állapot, mint ami eddig volt. A fiatalságot
+          ismerve
+          sokan nem fogtok beletörődni a hivatalos appok használatába, így azonban az alternatívákat a Play áruház
+          védelmén
+          kívülről fogjátok majd beszerezni; könnyen belefuthattok olyan appokba, amik már valóban veszélyt jelentenek
+          az
+          adataitokra.</p>
+
+        <p>A Filc Napló, Arisztokréta, és a hozzá hasonló alternatív megoldások jó felhasználói élményt nyújtanak, a
+          KRÉTA
+          rendszer használatát élvezetesebbé és hasznosabbá teszik, ahhoz hozzáadnak. Motivációt jelentenek (ahogy azt
+          örömmel láttuk pl. az átlagszámító funkció beemelésénél) a hivatalos appok fejlesztésében. Ha a KRÉTA újra a
+          Szivacsnál is látott módszereket veti be, az újra minden felhasználót fel fog háborítani. Erre szerintünk
+          nincs
+          szükség, és elkerülhető lenne.</p>
+      </li>
+    </ul><a href="#top">FEL</a>
+    </p>
+    <a name="mitfogtoktenni"></a>
     <h3>Mit fogtok tenni?</h3>
-    <h5>1. Email a KRÉTÁnak</h3>
+    <h5>1. Email a KRÉTÁnak</h5>
       <p>
       <details>
         <summary><b>A KRÉTÁnak küldött levelünk</b></summary>
@@ -150,34 +231,61 @@
           eltávolítás legyen, ne felfüggesztés.</li>
       </ul>
       </p>
-      <h5>3. Appok ismételt közzététele</h3>
-        <ul>
-          <li>Ha válaszolnak, a válaszuk szellemében járunk el.</li>
-          <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
-            megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
-          <li>Ha innen az
-            appokat újra eltávolíttatják, akkor akár feltölthetjük őket
-            márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
-            elérhetők maradnak GitHubon keresztül.</li>
-          <li>Az appokba automatikus
-            frissítési figyelmeztetést építünk.</li>
-        </ul>
-        <h5>4. Közösség bevonása</h3>
-          <p>
-            Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
-            összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó ötlet lenne,
-            talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
-          </p>
-          <h5>Utolsóadik: Beletörődés</h3>
-            <p>
-              Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
-              működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
-              próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
-              maradnak elérhetők, azokat saját felelősségre lehet majd csak
-              használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
-              kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
-            </p>
+      <h5>3. Appok ismételt közzététele</h5>
+      <ul>
+        <li>Ha a KRÉTA válaszol, annak szellemében járunk el.</li>
+        <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
+          megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
+        <li>Ha innen az
+          appokat újra eltávolíttatják, akkor akár feltölthetjük őket
+          márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
+          elérhetők maradnak GitHubon keresztül.</li>
+        <li>Az appokba automatikus
+          frissítési figyelmeztetést építünk.</li>
+      </ul>
+      <h5>4. Közösség bevonása</h5>
+      <p>
+        Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
+        összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó ötlet lenne,
+        talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
+      </p>
+      <h5>Utolsóadik: Beletörődés</h5>
+      <p>
+        Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
+        működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
+        próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
+        maradnak elérhetők, azokat saját felelősségre lehet majd csak
+        használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
+        kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
+        <br>
+      </p><a href="#top">FEL</a>
 
+      <a name="mibensegithetek"></a>
+      <h3>Miben segíthetek?</h3>
+      <p>Ha úgy érzed, van értelmes mondanivalód, írhatsz e-mailt a <a href="mailto:support@ekreta.hu">KRÉTA
+          ügyfélszolgálatának.</a><br>
+        Leírhatod az érzéseidet, miért, mire használtad az appjainkat, hogyan volt az
+        számodra hasznos, stb.<br>
+        <b>Az nem segít, ha ideges hangnemű, vagy őket szidó emailt küldesz! A spamelésnek és
+          egyéb hasonlóknak sincs értelme.</b>
+        <br>
+      </p>
+      <p>Szükségünk van jogi tanácsadásra, ha elfajulna a helyzet (amit nagyon remélünk, hogy nem fog). Ha ilyen
+        kvalitásokkal rendelkezel, te írj, ha ismersz valakit, akkor szólj neki, hogy írjon a <a
+          href="mailto:filcnaplo@filcnaplo.hu">Filc Napló e-mail címére.</a><br>
+        Ugyanide várjuk hozzászólásaitokat, véleményeteket, tippjeiteket is.</p><a href="#top">FEL</a>
+
+        <h3>Kapcsolat</h3>
+        <p>
+          <ul>
+            <li><a href="https://filcnaplo.hu/discord">Filc Napló Discord</a></li>
+            <li><a href="mailto:filcnaplo@filcnaplo.hu">Filc Napló e-mail</a></li>
+            <li><a href="https://github.com/filc/naplo">Filc Napló GitHub</a></li>
+            <li><a href="https://discord.gg/k3e2pqC">Arisztokréta Discord</a></li>
+            <li><a href="mailto:cowareapps@gmail.com">Arisztokréta e-mail</a></li>
+            <li><a href="https://github.com/Coware-Apps/ellenorzo">Arisztokréta GitHub</a></li>
+        </ul>
+        </p>
   </div>
 
 
