--- a/index.html
+++ b/index.html
@@ -359,16 +359,7 @@
       összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó ötlet lenne,
       talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
     </p>
-    <h5>Utolsóadik: Beletörődés</h5>
-    <p>
-      Ha semmiképp sem tudjuk kiharcolni, hogy viszonylag mainstream módon
-      működjenek az alternatív kliensek, akkor a széleskörű terjesztéssel való
-      próbálkozást abbahagyjuk, a projektek az azt kifejezetten felkutatóknak
-      maradnak elérhetők, azokat saját felelősségre lehet majd csak
-      használni.<br /><br />Természetesen mindent megteszünk, hogy ne így
-      kelljen abbahagynunk, kifejezett jogi fenyegetettség híján küzdeni fogunk.
-      <br>
-    </p><a href="#top">FEL</a>
+    <a href="#top">FEL</a>
 
     <a name="mibensegithetek"></a>
     <h3>Miben segíthetek?</h3>
