--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
         href="mailto:filcnaplo@filcnaplo.hu">Filc Napló e-mail címére.</a><br>
       Ugyanide várjuk hozzászólásaitokat, véleményeteket, tippjeiteket is.</p><a href="#top">FEL</a>
 
+    <a name="kapcsolat"></a>
     <h3>Kapcsolat</h3>
     <p>
     <ul>
