--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           Filc Napló adatkezelési tájékozatóját <a href="https://filcnaplo.hu/privacy">itt</a>, az
           Arisztokrétáét <a href="https://arisztokreta.hu/privacy">itt</a> találjátok.</p>
 
-        <p>Az appjaink nyílt forráskódúak, a kódbázis karbantartott és érthetően felépített, magagatoknak is
+        <p>Az appjaink nyílt forráskódúak, a kódbázis karbantartott és érthetően felépített, magatoknak is
           ellenőrizhetitek, hogy nem sodorják veszélybe a felhasználók adatait.</p>
 
         <p>A Filc Napló esetében az app forráskódjához több személynek van írásos hozzáférése, ők ezt alapos ellenőrzés
