--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         Eltávolíthatják, ami azt jelenti, hogy az appot nem lehet megtalálni a keresőben, de ha a fejlesztő javítja a
         kifogásolt elemet (ahogy azt mi is meg tudnánk tenni), az app különösebb probléma nélkül visszakerülhet az
         áruházba, még akkor is ha eredetileg tényleg fennállt a probléma.<br>
-        A súlyosabb döntés, amitben mi is részesültünk, a felfüggesztés. Talán kevésbé hangzik durvának, de ez az a
+        A súlyosabb döntés, amiben mi is részesültünk, a felfüggesztés. Talán kevésbé hangzik durvának, de ez az a
         boltból való eltávolításon túl azzal is jár, hogy a régi appot már soha többé nem lehet frissíteni, az
         értékelések és a felhasználók elvesznek, hacsak be nem sikerül bizonyítani hogy eredetileg sem állt fenn a
         probléma.<br>
