--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       A DMCA (Digital Millenium Copyright Act), amerikai szerzői jogra hivatkozó
       KRÉTÁs kérelem miatt a Google eltávolította az összes jelentős alternatív
       klienst a Play Áruházból (ezek az Arisztokréta, a Filc Napló, a Napló+, és
-      a K-Napló).
+      a K-Napló, összesen 20 000 fő körüli aktív telepítéssel).
     <details>
       <summary><b>A KRÉTA DMCA kérelmének személytelenített verziója</b></summary>
       <hr>
