--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           kérelmét:
         <details>
           <summary><b>A KRÉTA DMCA kérelmének személytelenített verziója</b></summary>
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card mt-2">
+            <div class="card-body">
               country_residence: HU<br>
               full_name: [privát]<br>
               companyname: eKRÉTA Informatikai Zrt.<br>
@@ -128,8 +128,8 @@
           A Filc csapata figyelemfelhívó posztot tesz közzé az r/hungary subredditen:<br>
         <details>
           <summary><b>Filc Napló DMCA - A KRÉTA újra ledobta az atombombát...</b></summary>
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card mt-2">
+            <div class="card-body">
               Kicsit több mint egy éve nagy port kavart a Szivacs napló, az alternatív e-KRÉTA kliens KRÉTA általi
               tiltása.<br> Szerencsére akkor nem ért véget a történet: egy csapat diák Filc Napló néven továbbvitte a
               projektet. Az app meglehetősen népszerű lett: jelenleg kb. 5500 aktív telepítéssel rendelkezik. <br>
@@ -229,8 +229,8 @@
       <a name="kretalevel"></a>
     <details>
       <summary><b>A KRÉTÁnak küldött levelünk</b></summary>
-      <div class="panel panel-default">
-        <div class="panel-body">
+      <div class="card mt-2">
+        <div class="card-body">
           <h4>Tisztelt Ügyfélszolgálat!</h4>
 
           <p>Ez az email a Filc Napló és az Arisztokréta alkalmazás fejlesztőinek közösen megfogalmazott üzenete.<br>
