--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <a name=top></a>
     <h2>
-      A Filc Napló és az Arisztokréta közös tájékoztatóoldala az alkalmazások
+      A Filc Napló és az Arisztokréta közös tájékoztatóoldala<br>az alkalmazások
       letiltásával kapcsolatban
     </h2>
     <p>SEGÍTSÉG, mennyi szöveg!<br>
