--- a/index.html
+++ b/index.html
@@ -153,6 +153,107 @@
         </details>
         </p>
       </li><br>
+      <li>
+        <p><b>2020. 12. 22</b></p>
+        <p>
+          Írtunk a Google-nak, hogy a felfüggesztést eltávolításra enyhítsék.
+        <details>
+          <summary>A levelünk tartalma:</summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              <p>
+                In the notification we received, the complaint was directed towards two things:
+              </p>
+              <p>
+                1. Copyright over the API-Key of the issuer. Our app does not contain, nor does it use the API-Key of
+                the
+                issuer. This allegation was false.
+              </p>
+              <p>
+                2. Copyright over the User Agent of the issuer. In case we got a prior notification from the issuer,
+                we'd
+                have
+                been able to resolve this issue easily, also we believe in this case, copyright law does not apply.
+              </p>
+              <p>
+                Solely based on this, the action taken by Google (Suspension) was either too harsh or wrong altogether.
+                We believe copyright law doesn't apply in our case and that the complaint was not legitimate, however,
+                please
+                advise us if we need to send a DMCA counter-notification instead.
+              </p>
+            </div>
+          </div>
+        </details>
+        </p>
+      </li>
+      <li>
+        <p><b>2020. 12. 23</b></p>
+        <details>
+          <summary>A google visszautasította a kérésünket</summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              Hi Filc Napló,
+
+              <p>Thanks for contacting the Google Play team.</p>
+
+              <p>We've reviewed your appeal but we're still unable to reinstate your app, Felt Diary
+                (hu.filcnaplo.ellenorzo).</p>
+
+              <p>If you'd like to contest the removal of this app, please follow the instructions shared in the initial
+                removal
+                email and fill out the DMCA counter-notice form.</p>
+
+              <p>If your account is still in good standing and the nature of your app allows for republishing, you may
+                consider
+                distributing a new, non-copyright infringing version of your app to Google Play. As app names are
+                unique,
+                you'll need to use a slightly modified app name and a new package name when you upload the APK.</p>
+
+              <p>We are unable to comment further on the specific basis for this removal or provide guidance on bringing
+                future
+                versions of your app into policy compliance. Instead, please reference the reason for removal in the
+                initial
+                notification email from Google Play.</p>
+
+              Regards,<br>
+              Chloe<br>
+              The Google Play Team
+            </div>
+          </div>
+        </details>
+      </li>
+      <li>
+        <p><b>2021. 01. 03</b></p>
+        <p>
+          Elkezdtük a Galaxy Store-ra és az AppGallery-re publikálni az appot.
+        </p>
+      </li>
+      <li>
+        <p><b>2021. 01. 8.</b></p>
+        <p>
+        <details>
+          <summary>A Kréta az AppStore-ból is levetette a Filcet.</summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              On 1/8/2021, we received a notice from eKRÉTA Informatikai Zrt. ("Complainant") that Complainant believes
+              the
+              app listed below infringes its intellectual property rights. In particular, Complainant believes you are
+              infringing its copyright. Please see their comments below.
+
+              Developer: Andras Benedek Fodor
+              Provider: Andras Benedek Fodor
+              App Title: Filc Napló
+              Apple ID: 1532030178
+
+              Comments: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA Ellenőrző official eKRÉTA Applications use API keys and
+              UserAgent to indentify themselves for the servers as the official eKRÉTA application. This alternative app
+              use
+              the same API keys and UserAgent as the official apps. Develepor has never asked us to use our API-s.
+            </div>
+          </div>
+        </details>
+        </p>
+      </li>
     </ul>
     </p>
 
