plsbro, egy kis consistency

--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
           </div>
         </details>
         </p>
-      </li><br>
+      </li>
       <li>
-        <p><b>2020. 12. 22</b></p>
         <p>
-          Írtunk a Google-nak, hogy a felfüggesztést eltávolításra enyhítsék.
+        <p><b>2020. 12. 22</b><br>
+          A Filc csapata Levelet küld a Googlenak, hogy a büntetést enyhítsék, vagy vonják vissza.
         <details>
-          <summary>A levelünk tartalma:</summary>
+          <summary><b>A levelünk tartalma</b></summary>
           <div class="card mt-2">
             <div class="card-body">
               <p>
@@ -175,21 +175,17 @@
                 have
                 been able to resolve this issue easily, also we believe in this case, copyright law does not apply.
               </p>
-              <p>
                 Solely based on this, the action taken by Google (Suspension) was either too harsh or wrong altogether.
                 We believe copyright law doesn't apply in our case and that the complaint was not legitimate, however,
                 please
                 advise us if we need to send a DMCA counter-notification instead.
-              </p>
             </div>
           </div>
         </details>
         </p>
-      </li>
-      <li>
-        <p><b>2020. 12. 23</b></p>
+        <p>A Google meglepően gyorsan, 23-án reagál, visszautasítják kérésünket:
         <details>
-          <summary>A google visszautasította a kérésünket</summary>
+          <summary><b>A Google válasza</b></summary>
           <div class="card mt-2">
             <div class="card-body">
               Hi Filc Napló,
@@ -221,34 +217,37 @@
             </div>
           </div>
         </details>
-      </li>
-      <li>
-        <p><b>2021. 01. 03</b></p>
-        <p>
-          Elkezdtük a Galaxy Store-ra és az AppGallery-re publikálni az appot.
+        </p>
         </p>
       </li>
       <li>
-        <p><b>2021. 01. 8.</b></p>
-        <p>
+        <p><b>2021. 01. 03</b><br>
+          A Filc csapata elindítja a Filc Napló közzétételi folyamatát Samsung Galaxy Store-ra és Huawei AppGallery-re.
+        </p>
+      </li>
+      <li>
+        <p><b>2021. 01. 8.</b><br>
+          Az (időközben publikált) Filc Napló is megkapja AppStore-on a Kréta eltávolítási kérelmét. Ahogy az
+          Arisztokréta esetében, itt sem kerül azonnal eltávolításra az app.
         <details>
-          <summary>A Kréta az AppStore-ból is levetette a Filcet.</summary>
+          <summary><b>A Kréta kérelme</b></summary>
           <div class="card mt-2">
             <div class="card-body">
-              On 1/8/2021, we received a notice from eKRÉTA Informatikai Zrt. ("Complainant") that Complainant believes
-              the
-              app listed below infringes its intellectual property rights. In particular, Complainant believes you are
-              infringing its copyright. Please see their comments below.
-
-              Developer: Andras Benedek Fodor
-              Provider: Andras Benedek Fodor
-              App Title: Filc Napló
-              Apple ID: 1532030178
-
-              Comments: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA Ellenőrző official eKRÉTA Applications use API keys and
-              UserAgent to indentify themselves for the servers as the official eKRÉTA application. This alternative app
-              use
-              the same API keys and UserAgent as the official apps. Develepor has never asked us to use our API-s.
+              <p>
+                On 1/8/2021, we received a notice from eKRÉTA Informatikai Zrt. ("Complainant") that Complainant
+                believes the app listed below infringes its intellectual property rights. In particular, Complainant
+                believes you are infringing its copyright. Please see their comments below.
+              </p>
+              <p>
+                Developer: Andras Benedek Fodor<br>
+                Provider: Andras Benedek Fodor<br>
+                App Title: Filc Napló<br>
+                Apple ID: 1532030178<br>
+              </p>
+                Comments: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA Ellenőrző official eKRÉTA Applications use API keys
+                and UserAgent to indentify themselves for the servers as the official eKRÉTA application. This
+                alternative app use the same API keys and UserAgent as the official apps. Develepor has never asked us
+                to use our API-s.
             </div>
           </div>
         </details>
@@ -434,7 +433,8 @@
             ez - ahogy az alternatív kliensek jelentős száma is mutatja - viszonylag könnyen megvalósítható.<br>
             Ha így döntenek, akkor azzal sajnos nem tudunk egyetérteni, de ha valóban nyilvánosan bejelentik, hogy
             megszüntetik az alternatív kliensek hozzáférését, azt elfogadjuk és tiszteletben fogjuk tartani; egy ilyen
-            bejelentés után a szóban forgó projektek terjesztését abba fogjuk hagyni.</p>
+            bejelentés után a szóban forgó projektek terjesztését abba fogjuk hagyni.
+          </p>
 
           <p>2. Az új KRÉTA mobilappok fejlesztésének kezdete óta pozitív szemléletváltást figyeltünk meg, azt reméltük,
             hogy ezzel az alternatív kliensek ellehetetlenítésének is vége lett. Sajnálattal látjuk, hogy ez nem így
@@ -445,7 +445,8 @@
               Agent-ükkel, a hivatalos másolása helyett.</b> Mi ezt a megoldást tekintjük alapértelmezettnek, amennyiben
             levelünkre nem kapunk választ és <b>a jövőben nem tiltják az ilyen lekéréseket.</b><br>
             Egy nyilvános, egyértelmű tiltásig, ameddig arra lehetőségünk van, az eddigi munkánk eredményét és a
-            felhasználók igényeit szem előtt tartva az alkalmazásokat továbbra is fejleszteni fogjuk.</p>
+            felhasználók igényeit szem előtt tartva az alkalmazásokat továbbra is fejleszteni fogjuk.
+          </p>
 
           <p>3. Szeretnénk nagyot álmodni, hogy sikerül közelebb hozni álláspontjainkat, ezért <b>az alternatív kliensek
               engedélyezését kérjük Önöktől:</b> Szeretnénk, ha számunkra is valamilyen módon lehetővé tennék a KRÉTA
